--- a/src/containers/CourseCard/CourseCard.scss
+++ b/src/containers/CourseCard/CourseCard.scss
@@ -53,7 +53,7 @@
     > .alert {
       border-radius: 0;
       box-shadow: none;
-      padding: map-get($spacers, 3) map-get($spacers, 4);
+      padding: 10px 10px 5px 10px;
 
       &:last-of-type {
         border-bottom-left-radius: $alert-border-radius;
