--- a/src/App.scss
+++ b/src/App.scss
@@ -67,3 +67,7 @@ $input-focus-box-shadow: $input-box-shadow; // hack to get upgrade to paragon 4.
     overflow: hidden;
   }
 }
+
+main#main {
+  min-height: 80vh !important;
+}
