--- a/src/containers/CourseCard/CourseCard.scss
+++ b/src/containers/CourseCard/CourseCard.scss
@@ -1,9 +1,12 @@
 @import "@openedx/paragon/scss/core/core";
 
 .course-card {
+  width: 100%;
   height: 100%;
 
   .card {
+    width: 100%;
+    min-width: 0;
     height: 100%;
     border-radius: 16px;
     border: 1px solid var(--border-color);
