--- a/src/containers/CoursesPanel/index.scss
+++ b/src/containers/CoursesPanel/index.scss
@@ -8,6 +8,8 @@
   padding: 2rem;
   box-shadow: var(--shadow);
   transition: background-color 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 .course-list-heading-container {
