--- a/src/containers/CoursesPanel/index.scss
+++ b/src/containers/CoursesPanel/index.scss
@@ -71,12 +71,13 @@
   gap: 1.5rem;
   width: 100%;
   justify-content: center;
+  align-items: stretch;
 
   .course-card {
     margin: 0 !important;
     height: 100%;
     flex: 1 1 360px;
-    max-width: 480px;
+    max-width: 440px;
   }
 }
 
