--- a/src/containers/CourseCard/CourseCard.scss
+++ b/src/containers/CourseCard/CourseCard.scss
@@ -19,6 +19,7 @@
     background: var(--bg-primary);
     overflow: hidden;
     transition: all 0.3s ease;
+    padding-bottom: 15px;
 
     &:hover {
       box-shadow: var(--shadow-lg);
@@ -32,7 +33,8 @@
       overflow: hidden;
       border-top-left-radius: 16px;
       border-top-right-radius: 16px;
-      height: 300px;
+      height: 320px;
+      padding: 0;
 
       &.vertical {
         display: flex;
@@ -43,8 +45,9 @@
     .pgn__card-image-cap {
       display: block;
       width: 100%;
-      height: 300px;
+      height: 100%;
       object-fit: cover;
+      object-position: center;
       border-bottom-left-radius: 0 !important;
       border-bottom-right-radius: 0 !important;
       border-bottom: 1px solid var(--border-light);
@@ -264,6 +267,10 @@
   }
 }
 
+.pgn__action-row a.btn.btn-primary{
+  width: 100%;
+}
+
 @include media-breakpoint-down(md) {
   .course-card {
     padding: 0 0.5rem;
@@ -272,7 +279,7 @@
       max-width: none;
 
       .pgn__card-image-cap {
-        height: 220px;
+        height: 100%;
       }
 
       .pgn__card-body {
