Edit WelcomeTab vào trong Learning

--- a/src/containers/CourseCard/CourseCard.scss
+++ b/src/containers/CourseCard/CourseCard.scss
@@ -246,6 +246,7 @@
       background: #e3f2fd;
       color: #1976d2;
       border: 1px solid #90caf9;
+      margin-top: 5px;
     }
 
     .alert-warning {
