--- a/src/containers/CourseCard/CourseCard.scss
+++ b/src/containers/CourseCard/CourseCard.scss
@@ -35,6 +35,7 @@
       border-top-right-radius: 16px;
       height: 320px;
       padding: 0;
+      max-width: 100% !important;
 
       &.vertical {
         display: flex;
