--- a/src/widgets/LookingForChallengeWidget/index.scss
+++ b/src/widgets/LookingForChallengeWidget/index.scss
@@ -22,8 +22,8 @@
 
   .pgn__card-wrapper-image-cap {
     overflow: visible;
-    min-width: 100% !important;
-    max-width: 100% !important;
+    min-width: 220px;
+    max-width: 240px;
     flex: 0 0 220px;
     display: flex;
     align-items: center;
