--- a/src/containers/CourseCard/CourseCard.scss
+++ b/src/containers/CourseCard/CourseCard.scss
@@ -275,10 +275,19 @@
 
 @include media-breakpoint-down(md) {
   .course-card {
-    padding: 0 0.5rem;
+    padding: 0;
+    padding-bottom: 1rem;
 
     .card {
       max-width: none;
+      width: 100%;
+      border-radius: 12px;
+
+      .pgn__card-wrapper-image-cap {
+        height: 240px;
+        border-top-left-radius: 12px;
+        border-top-right-radius: 12px;
+      }
 
       .pgn__card-image-cap {
         height: 100%;
@@ -286,6 +295,21 @@
 
       .pgn__card-body {
         padding: 1.25rem 1rem 1rem;
+      }
+
+      .course-card-body {
+        padding: 1rem;
+      }
+
+      .pgn__card-footer {
+        padding: 1rem;
+      }
+
+      .course-card-banners {
+        > .alert {
+          margin: 0 1rem 1rem;
+          padding: 0.75rem 1rem;
+        }
       }
     }
   }
