--- a/src/containers/CoursesPanel/index.scss
+++ b/src/containers/CoursesPanel/index.scss
@@ -94,11 +94,14 @@
 
 @include media-breakpoint-down(md) {
   .course-list-grid {
-    justify-content: stretch;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: flex-start;
 
     .course-card {
       flex: 1 1 100%;
-      max-width: none;
+      max-width: 100%;
+      width: 100%;
     }
   }
 }
@@ -111,21 +114,28 @@
 
 @include media-breakpoint-down(md) {
   .course-list-container {
-    padding: 1.5rem;
+    padding: 1rem 0.75rem;
   }
 
   .course-list-heading-container {
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: flex-start;
     gap: 0.75rem;
+    margin-bottom: 1rem;
   }
 
   .course-filter-controls-container {
     text-align: left;
     align-self: flex-start;
+    width: 100%;
+
+    button {
+      width: auto;
+    }
   }
 
   .course-list-title {
-    font-size: $h3-font-size;
+    font-size: 1.5rem;
+    margin: 0;
   }
 }
