--- a/src/widgets/LookingForChallengeWidget/index.scss
+++ b/src/widgets/LookingForChallengeWidget/index.scss
@@ -1,3 +1,5 @@
+@import "@openedx/paragon/scss/core/core";
+
 #looking-for-challenge-widget {
   background: var(--bg-primary);
   border: 2px solid var(--primary-light);
